[tool.poetry]
name = "solrcmf"
version = "0.1.0"
description = "Implements an ADMM algorithm to solve the solrCMF problem."
authors = ["Felix Held <felix.held@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.23.0,<2"
joblib = "^1.3.2"
scikit-learn = "^1.1.0"
typing-extensions = { version = "^4.9.0", python = "<3.11" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
