[tool.poetry]
name = "solrcmf"
version = "0.1.1"
description = "Implements an ADMM algorithm to solve the solrCMF problem."
authors = ["Felix Held <felix.held@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cyianor/solrcmf"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cyianor/solrcmf/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.23"
joblib = "^1.3.2"
scikit-learn = "^1.1.0"
typing-extensions = { version = "^4.9.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
nbconvert = "^7.16.4"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
